--- a/package.json
+++ b/package.json
@@ -6,27 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "npx tsx server.ts",
-    "prestart": "vite build",
-    "start": "NODE_ENV=production npx tsx server.ts",
-    "build:full": "npm run build && npm run start"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.17.0",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.2",
-    "cors": "^2.8.5",
-    "express": "^5.1.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "tsx": "^4.20.5"
+    "@google/genai": "^1.17.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
