refactor: Update application name to Food Safety AI Quiz- APEX
Updates the `name` field in `package.json` and `metadata.json` to reflect the new application name. This ensures consistency across project configuration and metadata.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "food-safety-ai-quiz",
+  "name": "food-safety-ai-quiz--apex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
